--- a/raptor_data_simulation/Snakefile
+++ b/raptor_data_simulation/Snakefile
@@ -1,60 +1,65 @@
+import subprocess
+import os.path
+
 # All parameters are set in config.yaml
 configfile: "../simulation_config.yaml"
 
-# Chosen workflow
-wf = config["wf"]
-
-# Parameters for data simulation 
-bin_dir = config["raptor_bin_dir"]
-out_dir = config["data_out_dir"]
-wf_out_dir = out_dir + "/" + wf
-
-size = config["ref_size"]
+# Simulating reference
+length = config["ref_size"]
 bin_nr = config["number_of_bins"]
+ht = config["haplotype_count"]
+
+# Simulating reads
 epr = config["errors_per_read"]
 rl = config["read_length"]
-rc = config["read_count"]
+rpg = config["reads_per_genome"]
 
-# Parameters for mason variator
-ht = config["haplotype_count"]
-sr = config["snp_rate"]
-ir = config["small_indel_rate"]
-
-# Parameters for MG-4
-nr_rf = config["read_file_count"]
+# An equal number of reads is sampled from each genome
+rc = rpg * ht * bin_nr
 
 # Helper variables
-digits = len(str(bin_nr))
-padding = "".zfill(digits)
-
-# Checking if data was already simulated
-import os.path
-if os.path.isfile("../data/" + wf + "/" + str(bin_nr) + "/reads_e" + str(epr) + "_" + str(rl) + "/0.fastq"):
-    print ("Skipping data simulation.")
-
-else:
-    # Creating simulated data
-    import subprocess
-    subprocess.call(['bash', './scripts/simulate.sh', bin_dir, wf_out_dir, str(size), str(bin_nr), str(epr), str(rl), str(rc), str(ht), str(sr), str(ir)])
-
-    # Renaming bin files; the filenames must have a specific format e.g 4.fasta not 04.fasta
-    subprocess.call(['bash', './scripts/rename_fasta.sh', wf, str(bin_nr), padding])
-    
-    if (wf != "MG-4"):
-        # Renaming read files
-        subprocess.call(['bash', './scripts/rename_fastq.sh', wf, str(bin_nr), str(epr), str(rl), padding])
-
-        # Simulate a situation where different bins contain similar sequences.
-        # Some reads will align to multiple bins.
-        if (config["mix_bins"]==1):
-            subprocess.call(['bash', './scripts/mix_bins.sh', wf, str(bin_nr)])
-    else:
-	# Create a custom number of read files
-        if (rc % nr_rf != 0):
-            print("ERROR! The number of reads must be divisible by the chosen number of read files!")
-        else:
-            subprocess.call(['bash', './scripts/custom_read_files.sh', wf, str(bin_nr), str(epr), str(rl), str(nr_rf)])
+bins = [*range(0, bin_nr, 1)]
 
 rule make_all:
+	input:
+		reads = expand("../../NO_BACKUP/simulated_metagenome/reads/{bin}.fastq", bin=bins)
+	params:
+		t = 1
+	resources:
+		nodelist = "cmp[241]"
 	shell:
 		"echo 'Done'"
+
+rule create_ref:		
+	output:
+		"../../NO_BACKUP/simulated_metagenome/bins/ref.fasta"
+	params:
+		t = 1
+	resources:
+		nodelist = "cmp[241]"
+	shell:
+		"./scripts/create_ref.sh {length}"
+
+rule divide_into_bins:		
+	input:
+		"../../NO_BACKUP/simulated_metagenome/bins/ref.fasta"
+	output:
+		expand("../../NO_BACKUP/simulated_metagenome/bins/{bin}.fasta", bin=bins)
+	params:
+		t = 1
+	resources:
+		nodelist = "cmp[241]"
+	shell:
+		"./scripts/divide_into_bins.sh {length} {bin_nr} {ht}"
+
+rule sample_reads:
+	input:
+		"../../NO_BACKUP/simulated_metagenome/bins/{bin}.fasta"
+	output:
+		"../../NO_BACKUP/simulated_metagenome/reads/{bin}.fastq"
+	params:
+		t = 2
+	resources:
+		nodelist = "cmp[241]"
+	shell:
+		"./scripts/sample_reads.sh {bin_nr} {epr} {rl} {rc} {ht}"
