Add submodules to allegro (#21)
* Data from buffer

* Repository in buffer

* Pick cluster node for samtools

* Pick cluster node for fm-indices

* Cluster node and whitespace

* Add submodules

Co-authored-by: Evelin Aasna <evelia95@allegro.imp.fu-berlin.de>

--- a/MG-1/Snakefile
+++ b/MG-1/Snakefile
@@ -6,10 +6,10 @@ bin_nr = config["number_of_bins"]
 epr = config["errors_per_read"]
 rl = config["read_length"]
 
+workdir: "../../allegro/MG1"
+
 # Creating list of wildcards
 bin_list = [str(i) for i in list(range(0,bin_nr))]
-
-workdir: "../../NO_BACKUP/simulated_metagenome/MG1"
 
 rule make_all:
 	input:
