--- a/MG-3/Snakefile
+++ b/MG-3/Snakefile
@@ -6,7 +6,7 @@ bin_nr = config["number_of_bins"]
 epr = config["errors_per_read"]
 rl = config["read_length"]
 
-workdir: "../../allegro/MG3"
+workdir: "../../NO_BACKUP/MG3"
 
 # Creating list of wildcards
 bin_list = [str(i) for i in list(range(0,bin_nr))]
@@ -15,7 +15,7 @@ rule make_all:
 	input:
 		"mapped_reads/all_sorted.sam"
 	resources:
-		nodelist = "cmp[227]"
+		nodelist = "cmp[201]"
 	benchmark:
 		repeat("benchmarks/all.txt", 2)
 	shell:
